@@ -1,3 +1,10 @@
+2000-09-07  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* router/libdb/bsdbtree.c router/libdb/gdbm.c:
+	    At iterative DB walkthroughs there were some
+	    problems at these two functions.  Now they
+	    should a) find data, b) terminate.
+
 2000-09-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* configure.in:
